# GameDevAgent

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  gamedev.json  pyproject.toml
.github/: CODEOWNERS
agent-sops/: pipeline-prop-kit.sop.md  pipeline-scene-to-unity.sop.md  pipeline-vertical-slice.sop.md
agents/: asset-researcher.agent-spec.json  blender-exporter.agent-spec.json  blender-materials.agent-spec.json  blender-modeler.agent-spec.json  blender-scene-composer.agent-spec.json  blender-spatial-engineer.agent-spec.json  project-manager.agent-spec.json  release-engineer.agent-spec.json  unity-build-engineer.agent-spec.json  unity-gameplay-programmer.agent-spec.json  unity-physics-engineer.agent-spec.json  unity-qa-tester.agent-spec.json  unity-scene-builder.agent-spec.json  unity-ui-programmer.agent-spec.json
crates/gamedev-worker/: Cargo.toml
docs/architecture/: change-impact-validation.md  polyglot-boundaries.md  task-execution-policy.md
evals/: cases.json
hooks/: pre_tool_use.py
pipelines/: pipeline-prop-kit.json  pipeline-scene-to-unity.json  pipeline-vertical-slice.json
skills/asset-research/: SKILL.md
skills/blender-export-fbx/: SKILL.md
skills/blender-export-gltf/: SKILL.md
skills/license-compliance/: SKILL.md
state/: manifest.json
tests/: test_change_impact.py  test_hook_integration.py  test_mcp.py  test_memory.py  test_permissions.py  test_pipeline_cli.py  test_polyglot_layout.py  test_protocol.py  test_runtime.py  test_state.py  test_task_difficulty.py
web/: README.md  package-lock.json  package.json  tsconfig.json
(+49 files in other folders)
