[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gamedev-agent"
version = "0.1.0"
description = "Persistent, auditable orchestration for Blender and Unity game-development agents"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "GameDevAgent contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "mypy==1.17.0",
  "pytest==8.4.1",
  "ruff==0.12.5",
]

[project.scripts]
gamedev = "gamedev_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gamedev_agent = [
  "contracts/*.json",
  "contracts/fixtures/*.json",
  "sql/migrations/*.sql",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "hooks", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["gamedev_agent"]
